Code cleanup; 4 more team players addd; Knockteam 8 introduced

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ FIRST=<first batting cricket team short form:string>
 SECOND=<second batting cricket team short form:string>
 QUICK_TESTING=<quick testing to kill the sleep time (0/1) :int>
 SLEEP_TIME_SECONDS=<sleep time in seconds (usually 1 or 0.5):float>
+KITKAT_TIME_SECONDS=<sleeping time between matches (usually 10 or 15):int>
